[gd_scene load_steps=6 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.25
bottom_radius = 0.25
height = 0.25

[sub_resource type="CylinderShape" id=3]
radius = 0.25
height = 0.25

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.86696, 0.407348, 1 )

[node name="VehicleBody" type="VehicleBody"]
input_ray_pickable = false
physics_material_override = SubResource( 1 )
continuous_cd = true
script = ExtResource( 1 )

[node name="FrontLeftWheel" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="FrontLeftWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="FrontLeftWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="FrontRightWheel" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="FrontRightWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="FrontRightWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="RearLeftWheel" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="RearLeftWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="RearLeftWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="RearRightWheel" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="RearRightWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="RearRightWheel"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.401852, 0 )
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, -2.26267e-08, 0.965926, 0.258819, 8.44439e-08, 0.258819, -0.965926, 0, 2, -4.09259 )
